don't forcibly feed .h's to object compilation

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,8 +13,8 @@ BINS = $(BINDIR)/makeCAF
 all: $(BINS)
 
 # make an object for any .cxx requested
-%.o : %.cxx
-	$(CXX) $(INCLUDE) $(CXXFLAGS) $(ROOTFLAGS) -fPIC -o $@ -c $^ #compile
+%.o : %.cxx %.h
+	$(CXX) $(INCLUDE) $(CXXFLAGS) $(ROOTFLAGS) -fPIC -o $@ -c $< #compile
 
 # should *really* make a .d rule for the objects
 # to get their dependencies on the headers right, but ... not now
