Add 28.25 m position to the 220620 campaign.

--- a/launch_ndcafmaker_campaign_220620.cfg
+++ b/launch_ndcafmaker_campaign_220620.cfg
@@ -8,7 +8,7 @@
 --pot_per_file 1e16
 
 # Which off-axis positions in m?
---off-axis_positions 1.75 5.75 9.75 13.75 17.75 21.75 25.75 26.25 28.5
+--off-axis_positions 1.75 5.75 9.75 13.75 17.75 21.75 25.75 26.25 28.25 28.5
 
 # How much POT at each position? This can be a space separated list as
 # with --off-axis_positions. If only one value is provided, the same
