First pass at enabling FlatCAF making in ND

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ SOURCES = $(shell find $(SRCDIR) -name '*.cxx')
 HEADERS = $(shell find $(SRCDIR) -name '*.h')
 OBJS = $(patsubst %.cxx, %.o, $(SOURCES))
 
-INCLUDE += -I$(SRCDIR)
+INCLUDE += -I$(SRCDIR) -I$(SRPROXY_INC)
 
 
 # Automatically enable SAND if SANDRECO_INC or SANDRECO_LIB are set
