removed stuff from find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,10 @@ find_package(duneanaobj REQUIRED)
 #find_package(ifdhc REQUIRED)
 find_package(hdf5 REQUIRED)
 #find_package(hf5cpp REQUIRED)
-find_package(fhicl-cpp REQUIRED)
+#find_package(fhicl-cpp REQUIRED)
 #find_package(tbb REQUIRED)
 find_package(gsl REQUIRED)
-find_package(pythia6 REQUIRED)
+#find_package(pythia6 REQUIRED)
 find_package(libxml2 REQUIRED)
 #find_package(dk2nugenie REQUIRED)
 find_package(log4cpp REQUIRED)
