echo goony include path for debug

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB cafmaker_includes *.h)
 set(source ${cafmaker_source})
 set(includes ${cafmaker_includes})
 
-message("${GENIE_INCLUDES}")
+message("GOONY: ${GENIE_INCLUDES}")
 include_directories(${GENIE_INCLUDES} reco truth util)
 
 # Where the macro files can be found.
