find_package all findable deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,14 +24,14 @@ find_package(Geant4 10.0 REQUIRED)
 find_package(duneanaobj REQUIRED)
 #find_package(ifdhc REQUIRED)
 find_package(hdf5 REQUIRED)
-#find_package(hf5cpp REQUIRED)
-#find_package(fhicl-cpp REQUIRED)
+find_package(hf5cpp REQUIRED)
+find_package(fhicl-cpp REQUIRED)
 #find_package(tbb REQUIRED)
-#find_package(gsl REQUIRED)
+find_package(gsl REQUIRED)
 #find_package(pythia6 REQUIRED)
-#find_package(libxml2 REQUIRED)
+find_package(libxml2 REQUIRED)
 #find_package(dk2nugenie REQUIRED)
-#find_package(log4cpp REQUIRED)
+find_package(log4cpp REQUIRED)
 
 # Look for GEANT4.  If it's found, then build the simulation.
 # Otherwise, this can be skipped, but only the i/o library is built.
