hf5cpp -> h5cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(Geant4 10.0 REQUIRED)
 find_package(duneanaobj REQUIRED)
 #find_package(ifdhc REQUIRED)
 find_package(hdf5 REQUIRED)
-find_package(hf5cpp REQUIRED)
+find_package(h5cpp REQUIRED)
 find_package(fhicl-cpp REQUIRED)
 #find_package(tbb REQUIRED)
 find_package(gsl REQUIRED)
