fhicl-cpp -> fhiclcpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ find_package(duneanaobj REQUIRED)
 #find_package(ifdhc REQUIRED)
 find_package(hdf5 REQUIRED)
 find_package(h5cpp REQUIRED)
-find_package(fhicl-cpp REQUIRED)
+find_package(fhiclcpp REQUIRED)
 #find_package(tbb REQUIRED)
 find_package(gsl REQUIRED)
 #find_package(pythia6 REQUIRED)
