undo removing source GLOB

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,10 @@ message("ND_CAFMaker in src/")
 # practice, but it makes maintaining this file easier.
 # file(GLOB_RECURSE source *.cc)
 # file(GLOB_RECURSE includes NDCAFMaker*.hh)
-#file(GLOB cafmaker_source makeCAF.C)
+file(GLOB cafmaker_source makeCAF.C)
 file(GLOB cafmaker_includes *.h)
 
-#set(source ${cafmaker_source})
+set(source ${cafmaker_source})
 set(includes ${cafmaker_includes})
 
 #set(GENIE_INCLUDES $ENV{GENIE_INC})
