changed include path, I forgot that relative paths used

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,13 +5,13 @@ message(STATUS "ND_CAFMaker in src/")
 # file(GLOB_RECURSE source *.cc)
 # file(GLOB_RECURSE includes NDCAFMaker*.hh)
 file(GLOB cafmaker_source makeCAF.C)
-file(GLOB cafmaker_includes *.h reco/*.h truth/*.h)
+file(GLOB cafmaker_includes *.h reco/*.h truth/*.h util/*.h)
 
 set(source ${cafmaker_source})
 set(includes ${cafmaker_includes})
 
 #set(GENIE_INCLUDES $ENV{GENIE_INC})
-include_directories(${GENIE_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/reco ${CMAKE_CURRENT_SOURCE_DIR}/truth ${CMAKE_CURRENT_SOURCE_DIR}/util)
+include_directories(${GENIE_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Where the macro files can be found.
 #add_definitions(-DDETSIM_INSTALL_PREFIX=\"${CMAKE_INSTALL_PREFIX}\")
